updated behavior of buttons to copy to clipboard